src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>rC_Bios__Preferred_Phone__c</fullName>
        <description>Manualy populated field indicating a Contact&apos;s preferred email phone number.</description>
        <inlineHelpText>Indicates a Contact&apos;s preferred phone number.</inlineHelpText>
        <label>Preferred Phone</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Role__c</fullName>
        <description>Manually populated field indicating the Contact&apos;s Role.</description>
        <inlineHelpText>Indicates the Contact&apos;s Role.</inlineHelpText>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Rollup_Addresses__c</fullName>
        <description>Automatically populated via auto rollup, this field contains the greatest (most recent) Last Modified Date out of all the Contact Addresses on the Contact</description>
        <inlineHelpText>Contains the greatest (most recent) Last Modified Date out of all the Contact Addresses on the Contact</inlineHelpText>
        <label>Rollup Addresses</label>
        <summarizedField>rC_Bios__Contact_Address__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>rC_Bios__Contact_Address__c.rC_Bios__Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Salutation__c</fullName>
        <description>Salutation populated from Salutation record marked as Preferred Salutation = TRUE.</description>
        <inlineHelpText>Salutation populated from Preferred Salutation record.</inlineHelpText>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Secondary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically populated via trigger when Secondary Contact is selecteed on the Account Manage Contacts Page.</description>
        <inlineHelpText>Indicates this Contact is the secondary Contact for their Account.</inlineHelpText>
        <label>Secondary Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Suffix__c</fullName>
        <description>Suffix of Contact (e.g. Jr, Sr, II)</description>
        <inlineHelpText>Suffix of Contact (e.g. Jr, Sr, II)</inlineHelpText>
        <label>Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Twitter_Url__c</fullName>
        <description>Manually populated field providing the URL to the Contact&apos;s Twitter page.</description>
        <inlineHelpText>Url to Contact&apos;s Twitter page.</inlineHelpText>
        <label>Twitter URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Website_Url__c</fullName>
        <description>Manually populated field providing the URL to the Contact&apos;s Website.</description>
        <inlineHelpText>Contact&apos;s Website.</inlineHelpText>
        <label>Website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Work_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field Indicating the Work phone should not be called.</description>
        <inlineHelpText>Indicates the Work phone should not be called.</inlineHelpText>
        <label>Work Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Work_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field, check to opt out of email communication to Work.</description>
        <inlineHelpText>Check to opt out of email communication to Work.</inlineHelpText>
        <label>Work Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Work_Email__c</fullName>
        <description>Manually populated field indicating Contact&apos;s work email.</description>
        <inlineHelpText>Contact&apos;s work email address.</inlineHelpText>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Work_Phone__c</fullName>
        <description>Manually populated field indicating Contact&apos;s work phone number.</description>
        <inlineHelpText>Contact&apos;s work phone number.</inlineHelpText>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Soft_Credit_Amount__c</fullName>
        <description>Dollar value of gifts on Contact where Soft Credits were received for the current calendar year starting January 1.</description>
        <inlineHelpText>Dollar value of gifts on Contact where Soft Credits were received for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Soft_Credit_Count__c</fullName>
        <description>Number of gifts on Contact where Soft Credits were received for the current calendar year starting January 1.</description>
        <inlineHelpText>Number of gifts on Contact where Soft Credits were received for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Soft Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Soft_Credit_Amount__c</fullName>
        <description>Amount of first Soft Credit received on Contact.</description>
        <inlineHelpText>Amount of first Soft Credit received on Contact.</inlineHelpText>
        <label>First Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Soft_Credit_Date__c</fullName>
        <description>Date first Soft Credit received on Contact.</description>
        <inlineHelpText>Date first Soft Credit received on Contact.</inlineHelpText>
        <label>First Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Largest_Soft_Credit_Amount__c</fullName>
        <description>Amount of largest Soft Credit received on Contact.</description>
        <inlineHelpText>Amount of largest Soft Credit received on Contact.</inlineHelpText>
        <label>Largest Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Largest_Soft_Credit_Date__c</fullName>
        <description>Date largest Soft Credit received on Contact.</description>
        <inlineHelpText>Date largest Soft Credit received on Contact.</inlineHelpText>
        <label>Largest Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Soft_Credit_Amount__c</fullName>
        <description>Amount of last Soft Credit received on Contact.</description>
        <inlineHelpText>Amount of last Soft Credit received on Contact.</inlineHelpText>
        <label>Last Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Soft_Credit_Date__c</fullName>
        <description>Date last Soft Credit received on Contact.</description>
        <inlineHelpText>Date last Soft Credit received on Contact.</inlineHelpText>
        <label>Last Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Soft_Credit_Amount__c</fullName>
        <description>Total dollar value of Soft Credits this Contact has received.</description>
        <inlineHelpText>Total dollar value of Soft Credits this Contact has received.</inlineHelpText>
        <label>Lifetime Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Soft_Credit_Count__c</fullName>
        <description>Total number of gifts where this Contact has received Soft Credits.</description>
        <inlineHelpText>Total number of gifts where this Contact has received Soft Credits.</inlineHelpText>
        <label>Lifetime Soft Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Primary_Affiliation__c</fullName>
        <description>Formula retrieves the Contact&apos;s primary Affiliation.</description>
        <formula>Text(Account.rC_Giving__Primary_Affiliation__c)</formula>
        <label>Primary Affiliation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Primary_Giving_Level__c</fullName>
        <description>Formula retrieves the Contact&apos;s Primary Giving Level.</description>
        <formula>Account.rC_Giving__Primary_Giving_Level__r.Name</formula>
        <label>Primary Giving Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Primary_Membership_Expiration_Date__c</fullName>
        <description>Formula retrieves the Contact&apos;s Primary Membership Expiration Date.</description>
        <formula>Account.rC_Giving__Primary_Membership_Expiration_Date__c</formula>
        <label>Primary Membership Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Primary_Membership_Status__c</fullName>
        <description>Formula retrieves the Contact&apos;s Primary Membership Status.</description>
        <formula>Account.rC_Giving__Primary_Membership_Status__c</formula>
        <label>Primary Membership Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Soft_Credit_Amount__c</fullName>
        <description>Dollar value of gifts on Contact where Soft Credits were received during the immediately prior calendar year.</description>
        <inlineHelpText>Dollar value of gifts on Contact where Soft Credits were received during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Soft_Credit_Count__c</fullName>
        <description>Number of gifts on Contact where Soft Credits were received during the immediately prior calendar year.</description>
        <inlineHelpText>Number of gifts on Contact where Soft Credits were received during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Soft Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Soft_Credits_Status__c</fullName>
        <description>Status of Soft Credit information on Contact. Status of &apos;Ok&apos; means data is up to date.</description>
        <formula>IF(NOT(rC_Giving__Track_Soft_Credits__c), &apos;Not Enabled&apos;, IF(ISBLANK(rC_Giving__Rollup_Soft_Credits__c), &apos;Pending Refresh&apos;, &apos;Ok&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status of Soft Credit information on Contact. Status of &apos;Ok&apos; means data is up to date.</inlineHelpText>
        <label>Rollup Soft Credits Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Soft_Credits__c</fullName>
        <description>Populated by trigger, indicates the date and time from the most recently updated Soft Credit record.</description>
        <label>Rollup Soft Credits</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Track_Soft_Credits__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Track and display Soft Credit information on Contact.</description>
        <inlineHelpText>Track and display Soft Credit information on Contact.</inlineHelpText>
        <label>Track Soft Credits?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <namedFilters>
        <fullName>rC_Giving__nf_01Id0000001DaAgEAK_00Nd0000005L9PFEA0</fullName>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. Contact must be associated to selected Account.</errorMessage>
        <field>rC_Giving__Planned_Giving__c.rC_Giving__Contact__c</field>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.rC_Giving__Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Planned Giving_Contact</name>
        <sourceObject>rC_Giving__Planned_Giving__c</sourceObject>
    </namedFilters>
    <recordTypes>
        <fullName>rC_Bios__Household</fullName>
        <active>true</active>
        <description>Individuals belonging to a Household.</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>rC_Bios__Organizational</fullName>
        <active>true</active>
        <description>Individuals belonging to an Organization or Foundation</description>
        <label>Organizational</label>
    </recordTypes>
    <validationRules>
        <fullName>rC_Bios__Account_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Setup.rC_Bios__Contact_Validation__c.rC_Bios__Account_Is_Required__c,ISBLANK(AccountId),False)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Required field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Assistant_Email_Not_Preferred_Opt_Out</fullName>
        <active>false</active>
        <description>@Disabled(Version=2.0)</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>@Disabled(Version=2.0)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Assistant_Email_Required_If_Preferred</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Setup.rC_Bios__Contact_Validation__c.rC_Bios__Assistant_Email_Required_If_Preferred__c,
(AND(ISBLANK(rC_Bios__Assistant_Email__c), 
ISPICKVAL(rC_Bios__Preferred_Email__c, &apos;Assistant&apos;))),
False
)</errorConditionFormula>
        <errorDisplayField>rC_Bios__Assistant_Email__c</errorDisplayField>
        <errorMessage>Required field when marked as preferred</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Assistant_Phone_Not_Preferred_DNC</fullName>
        <active>false</active>
        <description>@Disabled(Version=2.0)</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>@Disabled(Version=2.0)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Assistant_Phone_Required_If_Preferred</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Setup.rC_Bios__Contact_Validation__c.rC_Bios__Assistant_Phone_Required_If_Preferred__c,
(AND(ISBLANK(AssistantPhone), 
ISPICKVAL(rC_Bios__Preferred_Phone__c, &apos;Assistant&apos;))),
False
)</errorConditionFormula>
        <errorDisplayField>AssistantPhone</errorDisplayField>
        <errorMessage>Required field when marked as preferred</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Birth_Date_Is_Not_In_Future</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
$Setup.rC_Bios__Contact_Validation__c.rC_Bios__Birth_Date_Is_Not_In_Future__c,
(IF(NOT(ISBLANK(Birthdate)), Birthdate &gt; TODAY(), 
IF(NOT(ISBLANK(TEXT(rC_Bios__Birth_Year__c))) &amp;&amp; NOT(ISBLANK(TEXT(rC_Bios__Birth_Month__c))), 
DATE(VALUE(TEXT(rC_Bios__Birth_Year__c)), VALUE(TEXT(rC_Bios__Birth_Month__c)), DAY(TODAY())) &gt; TODAY(), 
IF(NOT(ISBLANK(TEXT(rC_Bios__Birth_Year__c))), 
DATE(VALUE(TEXT(rC_Bios__Birth_Year__c)), MONTH(TODAY()), DAY(TODAY())) &gt; TODAY(), false)))),
False
)</errorConditionFormula>
        <errorMessage>The Birthdate cannot be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Birth_Deceased_Invalid_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF( $Setup.rC_Bios__Contact_Validation__c.rC_Bios__Birth_Deceased_Invalid_Date__c,
(AND(NOT(ISBLANK(Birthdate)), NOT(ISBLANK(rC_Bios__Deceased_Date__c)), Birthdate &gt; rC_Bios__Deceased_Date__c)),
False
)</errorConditionFormula>
        <errorDisplayField>Birthdate</errorDisplayField>
        <errorMessage>Birthdate cannot be after the Deceased Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Birth_Deceased_Invalid_Day</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Setup.rC_Bios__Contact_Validation__c.rC_Bios__Birth_Deceased_Invalid_Day__c,
(AND(
NOT(ISBLANK(TEXT(rC_Bios__Birth_Year__c))), 
NOT(ISBLANK(TEXT(rC_Bios__Birth_Month__c))), 
NOT(ISBLANK(TEXT(rC_Bios__Birth_Day__c))), 
NOT(ISBLANK(TEXT(rC_Bios__Deceased_Year__c))), 
NOT(ISBLANK(TEXT(rC_Bios__Deceased_Month__c))), 
NOT(ISBLANK(TEXT(rC_Bios__Deceased_Day__c))), 
VALUE(TEXT(rC_Bios__Birth_Year__c)) == VALUE(TEXT(rC_Bios__Deceased_Year__c)), 
VALUE(TEXT(rC_Bios__Birth_Month__c)) == VALUE(TEXT(rC_Bios__Deceased_Month__c)), VALUE(TEXT(rC_Bios__Birth_Day__c)) &gt; VALUE(TEXT(rC_Bios__Deceased_Day__c)))),
False
)</errorConditionFormula>
        <errorDisplayField>rC_Bios__Birth_Day__c</errorDisplayField>
        <errorMessage>Birth Day cannot be after the Deceased Day</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Birth_Deceased_Invalid_Month</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Setup.rC_Bios__Contact_Validation__c.rC_Bios__Birth_Deceased_Invalid_Month__c,
(AND(NOT(ISBLANK(TEXT(rC_Bios__Birth_Year__c))), NOT(ISBLANK(TEXT(rC_Bios__Birth_Month__c))), NOT(ISBLANK(TEXT(rC_Bios__Deceased_Year__c))), NOT(ISBLANK(TEXT(rC_Bios__Deceased_Month__c))), VALUE(TEXT(rC_Bios__Birth_Year__c)) == VALUE(TEXT(rC_Bios__Deceased_Year__c)), VALUE(TEXT(rC_Bios__Birth_Month__c)) &gt; VALUE(TEXT(rC_Bios__Deceased_Month__c)))),
False
)</errorConditionFormula>
        <errorDisplayField>rC_Bios__Birth_Month__c</errorDisplayField>
        <errorMessage>Birth Month cannot be after the Deceased Month</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Birth_Deceased_Invalid_Year</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Setup.rC_Bios__Contact_Validation__c.rC_Bios__Birth_Deceased_Invalid_Year__c,
(AND(NOT(ISBLANK(TEXT(rC_Bios__Birth_Year__c))), NOT(ISBLANK(TEXT(rC_Bios__Deceased_Year__c))), VALUE(TEXT(rC_Bios__Birth_Year__c)) &gt; VALUE(TEXT(rC_Bios__Deceased_Year__c)))),
False
)</errorConditionFormula>
        <errorDisplayField>rC_Bios__Birth_Year__c</errorDisplayField>
        <errorMessage>Birth Year cannot be after the Deceased Year</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Birthdate_Is_Not_In_Future</fullName>
        <active>false</active>
        <description>@Disabled(Version=2.0)</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>@Disabled(Version=2.0)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Deceased_Date_Is_Not_In_Future</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Setup.rC_Bios__Contact_Validation__c.rC_Bios__Deceased_Date_Is_Not_In_Future__c,
(IF(NOT(ISBLANK(rC_Bios__Deceased_Date__c)), 
rC_Bios__Deceased_Date__c &gt; TODAY(), 
IF(NOT(ISBLANK(TEXT(rC_Bios__Deceased_Year__c))) &amp;&amp; TEXT(rC_Bios__Deceased_Year__c) == &apos;Unknown&apos;, 
false, 
IF(NOT(ISBLANK(TEXT(rC_Bios__Deceased_Year__c))) &amp;&amp; NOT(ISBLANK(TEXT(rC_Bios__Deceased_Month__c))),
DATE(VALUE(TEXT(rC_Bios__Deceased_Year__c)), VALUE(TEXT(rC_Bios__Deceased_Month__c)), DAY(TODAY())) &gt; TODAY(), 
IF(NOT(ISBLANK(TEXT(rC_Bios__Deceased_Year__c))),
DATE(VALUE(TEXT(rC_Bios__Deceased_Year__c)), MONTH(TODAY()), DAY(TODAY())) &gt; TODAY(), false))))),
False
)</errorConditionFormula>
        <errorMessage>The Deceased Date cannot be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Fax_Required_If_Preferred</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Setup.rC_Bios__Contact_Validation__c.rC_Bios__Fax_Required_If_Preferred__c,
(AND(ISBLANK(Fax), ISPICKVAL(rC_Bios__Preferred_Phone__c, &apos;Fax&apos;))),
False
)</errorConditionFormula>
        <errorDisplayField>Fax</errorDisplayField>
        <errorMessage>Required field when marked as preferred</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Home_Email_Not_Preferred_Opt_Out</fullName>
        <active>false</active>
        <description>@Disabled(Version=2.0)</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>@Disabled(Version=2.0)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Home_Email_Required_If_Preferred</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Setup.rC_Bios__Contact_Validation__c.rC_Bios__Home_Email_Required_If_Preferred__c,
(AND(ISBLANK(rC_Bios__Home_Email__c), ISPICKVAL(rC_Bios__Preferred_Email__c, &apos;Home&apos;))),
False
)</errorConditionFormula>
        <errorDisplayField>rC_Bios__Home_Email__c</errorDisplayField>
        <errorMessage>Required field when marked as preferred</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Home_Phone_Not_Preferred_DNC</fullName>
        <active>false</active>
        <description>@Disabled(Version=2.0)</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>@Disabled(Version=2.0)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Home_Phone_Required_If_Preferred</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Setup.rC_Bios__Contact_Validation__c.rC_Bios__Home_Phone_Required_If_Preferred__c,
(AND(ISBLANK(HomePhone), ISPICKVAL(rC_Bios__Preferred_Phone__c, &apos;Home&apos;))),
False
)</errorConditionFormula>
        <errorDisplayField>HomePhone</errorDisplayField>
        <errorMessage>Required field when marked as preferred</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Mobile_Phone_Not_Preferred_DNC</fullName>
        <active>false</active>
        <description>@Disabled(Version=2.0)</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>@Disabled(Version=2.0)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Mobile_Phone_Required_If_Preferred</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Setup.rC_Bios__Contact_Validation__c.rC_Bios__Mobile_Phone_Required_If_Preferred__c,
(AND(ISBLANK(MobilePhone), ISPICKVAL(rC_Bios__Preferred_Phone__c, &apos;Mobile&apos;))),
False
)</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Required field when marked as preferred</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Other_Email_Not_Preferred_Opt_Out</fullName>
        <active>false</active>
        <description>@Disabled(Version=2.0)</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>@Disabled(Version=2.0)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Other_Email_Required_If_Preferred</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Setup.rC_Bios__Contact_Validation__c.rC_Bios__Other_Email_Required_If_Preferred__c,
(AND(ISBLANK(rC_Bios__Other_Email__c), ISPICKVAL(rC_Bios__Preferred_Email__c, &apos;Other&apos;))),
False
)</errorConditionFormula>
        <errorDisplayField>rC_Bios__Other_Email__c</errorDisplayField>
        <errorMessage>Required field when marked as preferred</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Other_Phone_Not_Preferred_DNC</fullName>
        <active>false</active>
        <description>@Disabled(Version=2.0)</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>@Disabled(Version=2.0)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Other_Phone_Required_If_Preferred</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Setup.rC_Bios__Contact_Validation__c.rC_Bios__Other_Phone_Required_If_Preferred__c,
(AND(ISBLANK(OtherPhone), ISPICKVAL(rC_Bios__Preferred_Phone__c, &apos;Other&apos;))),
False
)</errorConditionFormula>
        <errorDisplayField>OtherPhone</errorDisplayField>
        <errorMessage>Required field when marked as preferred</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Preferred_Contact_And_Secondary_Contact</fullName>
        <active>true</active>
        <errorConditionFormula>IF(  $Setup.rC_Bios__Contact_Validation__c.rC_Bios__Preferred_Contact_And_Secondary_Contact__c , AND( rC_Bios__Preferred_Contact__c ,  rC_Bios__Secondary_Contact__c ), False)</errorConditionFormula>
        <errorMessage>Contact can be either Primary or Secondary</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Preferred_Contact_Is_Not_Minor_Child</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Setup.rC_Bios__Contact_Validation__c.rC_Bios__Preferred_Contact_Is_Not_Minor_Child__c,
(AND(rC_Bios__Preferred_Contact__c, rC_Bios__Minor_Child__c)),
False
)</errorConditionFormula>
        <errorDisplayField>rC_Bios__Preferred_Contact__c</errorDisplayField>
        <errorMessage>Cannot set a minor child as a preferred contact</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Secondary_Contact_Is_Not_Minor_Child</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Setup.rC_Bios__Contact_Validation__c.rC_Bios__Secondary_Contact_Is_Not_Minor_Child__c ,rC_Bios__Secondary_Contact__c, rC_Bios__Minor_Child__c)= TRUE</errorConditionFormula>
        <errorDisplayField>rC_Bios__Secondary_Contact__c</errorDisplayField>
        <errorMessage>Cannot set a minor child as a Secondary contact</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Work_Email_Not_Preferred_Opt_Out</fullName>
        <active>false</active>
        <description>@Disabled(Version=2.0)</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>@Disabled(Version=2.0)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Work_Email_Required_If_Preferred</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Setup.rC_Bios__Contact_Validation__c.rC_Bios__Work_Email_Required_If_Preferred__c,
(AND(ISBLANK(rC_Bios__Work_Email__c), ISPICKVAL(rC_Bios__Preferred_Email__c, &apos;Work&apos;))),
False
)</errorConditionFormula>
        <errorDisplayField>rC_Bios__Work_Email__c</errorDisplayField>
        <errorMessage>Required field when marked as preferred</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Work_Phone_Not_Preferred_DNC</fullName>
        <active>false</active>
        <description>@Disabled(Version=2.0)</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>@Disabled(Version=2.0)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Bios__Work_Phone_Required_If_Preferred</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Setup.rC_Bios__Contact_Validation__c.rC_Bios__Work_Phone_Required_If_Preferred__c,
(AND(ISBLANK(rC_Bios__Work_Phone__c), ISPICKVAL(rC_Bios__Preferred_Phone__c, &apos;Work&apos;))),
False
)</errorConditionFormula>
        <errorDisplayField>rC_Bios__Work_Phone__c</errorDisplayField>
        <errorMessage>Required field when marked as preferred</errorMessage>
    </validationRules>
</CustomObject>